# SVD-Image-Compression

./: CMakeLists.txt  README.md
src/: main.cc  plotter.cc  plotter.h  structs.h
